# DataPrepPro

./: README.md  requirements.txt  run_tests.py  setup.cfg  setup.py
DataPrepPro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test-env/: pyvenv.cfg
test-env/Scripts/: activate  activate.bat
