[metadata]
name = DataPrepToolkit
version = 0.1.0
author = Coskun Erden
description = A package for data cleaning and feature engineering
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CoskunErden/DataPrepToolkit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    matplotlib
    seaborn

[flake8]
max-line-length = 88
extend-ignore = E203
